# GoAna

./: .gitignore  CMakeLists.txt  CTestCustom.cmake  README.md
analysis/: CMakeLists.txt
analysis/bat_tools/: bat_analysis_base.h
analysis/comparison/: CMakeLists.txt  README.md
analysis/comparison/macro/: ConvertRootToASCII.sh.in  startCompare.sh.in
analysis/comparison/run/: runPlot.cxx  runRootToASCII.cxx  runcompare.cxx
analysis/lambdas/: CMakeLists.txt
analysis/lambdas/RooAnalysis/: RooECAnalysis.cxx  RooECAnalysis.h
analysis/lambdas/run/: run2SamplesKolmogorovTest.cxx  runFitLambda.cxx
analysis/lambdas/run/scripts/: FitLambdas.sh.in  KolmogorovTest.sh.in
analysis/options/: CMakeLists.txt  OscConfig.cxx  OscConfig.h  OscillationAnalysis.cfg.in  SimpleConfig.cxx  SimpleConfig.h
cmake/modules/: CheckCompiler.cmake  FairMacros.cmake  FindBAT.cmake  FindFairRoot.cmake  FindROOT.cmake  Findcuba.cmake  GenerateVersionInfo.cmake  ROOTMacros.cmake  WriteConfigFile.cmake
cmake/scripts/: FairVersion.h.default  FairVersion.h.tmp  config.csh.in  config.sh.in  fairroot-config.in
data/: CMakeLists.txt  EsrInjData.cxx  EsrInjData.h  EsrTree.cxx  EsrTree.h  MQconfig.cxx  MQconfig.h  OscMCPoint.cxx  OscMCPoint.h  SIDSDataLinkDef.h
data/io/: SIDSFileManager.cxx  SIDSFileManager.h
models/: CMakeLists.txt  ExpModel.cxx  ExpModel.h  OscModel.cxx  OscModel.h  RooOscModel.cxx  RooOscModel.h  SIDSModelLinkDef.h
tools/: CMakeLists.txt  SIDSLog.h  SIDSProgOptions.cxx  SIDSProgOptions.h  SIDSProgOptionsHelper.h
tools/logger/: CMakeLists.txt  logger.h  logger_def.h
